# Aether

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  aether_db_env.ps1  aether_db_setup.ps1  bump.config.ts  bumpp.config.ts  bun.lockb  eslint.config.js  index.html  lefthook.yml  old.eslintrc.json  package.json  plan.md  steiger.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  turbo.jsonc  ui.config.json  vite.config.ts
apps/desktop/: .gitignore  Cargo.toml  build.rs  eslint.config.js  lefthook.yml  package.json  sqlx.toml  steiger.config.js  tauri.conf.json  tsconfig.json  tsconfig.node.json  turbo.jsonc  ui.config.json  vite.config.ts
apps/desktop/.github/workflows/: executable.yml
apps/desktop/.husky/: pre-commit
apps/desktop/.sqlx/: query-12c33bab0370edffd15d9e0b0095aa1c931101c538dd09282341516d8609ec1b.json  query-14908a6a051c5c77b03b473abb63c2bda88996245e7de80615c3091ec7e5cf65.json  query-1d24da8ffdc0bba130fa413a824a9d408bfa9fb5b264a5f5e6c5e4d0d57906e3.json  query-29d2a9013924420c9a86a87b3dabc4fda638d3b0d54379f5320352e23322b0c2.json  query-3c0094423b434884d845f007a771999ed7cced3fa14822848f97abd7afcff5ca.json  query-686417cdc3908c80a48ba873840d76e1412b920fd7f0b6bc0b8129a804e9c06d.json  query-6af2f0536a26bf585c5ecc8d30ba7f6f1f3732981e7cca8ecd92fde893cb6a03.json  query-6d65094234decc2941cd6ffaed8834bb4449bd590994ad8e88aa17219a6bf043.json  query-6e0f849affb5b7fcb27171f13bae17bab8f02a01331ff9d94dee89eabcaca991.json  query-71dd43473be6fc2365c6379002e10eb8441af4875ca220c6576b6a4ee8267c0a.json  query-805152c8089342c59df070e0bdc00aa4174325eafd0bae1c517a476283a3986e.json  query-8abb128ec53dcb08361c062153f6cdae757d88186a4aa55f9ad8e1a221bbcaf4.json  query-93c283e27580b8b82275b3d5ec4b591c4e820ba32216b0825ac8a874f6282c53.json  query-b302f45f232de8beac91f920c3fcba4740ff4f6a437e1893d299e6fda9b2aea0.json  query-bf650e673b304eec05fdfaf96225c9f0519b8cebc77af9c80f5304768ebf251e.json  query-c1d370b0480821afa283f02057343a0f4513947291eaf50217497ad2cf4b9bb1.json  query-c22ac6c6bf92d777852ad60785ca322aaf516e9ccc56b067dc9b8e032789a5ef.json  query-c4d0cc09638029579b1a1a8b6f75cb9844f360ef9b4f06938276506980420f67.json  query-d5197c5f622b21f02b93a2c18a7972bf422371a5d509d426300e6c4cdb92f471.json  query-dc58d002dab6be64dea86c6ce68471b814fdedc2a22f7deade1e4025a8476b75.json  query-e12313eccf9045d625ba976b7976357b200e7ef34ce471bc0dbdfbfaaa965034.json  query-eee34ec3505240ffc7f1ddde54b750a607f217f4450e733e31dc254fdcce2e8e.json  query-f6ebe77ff41684a59bb0030e13bd21c646ab53755d7d998fb47fa84150f22f74.json
apps/desktop/migrations/: 20260504203107_app_settings.sql
apps/desktop/src/: index.tsx  lib.rs  main.rs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  init_db.ps1  setup_env.ps1  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/.sqlx/: query-32413bd6fc48f61292ede31538f8eac88dee9426c46e8cd3c96653be046c378d.json  query-3cc8cc7ce233217e440270754ab174a8ac4c1437de599568dd679d716f70d7fb.json  query-44205d2f2e05c01c4ce33843580700976d364ad092fac09878ccb2eb105e4769.json  query-4b4490d1c279777bd22bfbdb5c0421b55ff4da3a2f8ba9064299a0972cf76ec3.json  query-71e5880dfe8a44a08ca64ebe9e3ea05a05b041f402f1e768c0c79fd503de4ec4.json  query-80561a932b660f4384ecb07d30b9ef2f272c259787ed523534b6b6a791240fd5.json  query-b05dfcc1c6fa0019fc47df648ea4bc562f3621f355ec03ceba9e97916d944b09.json  query-b302f45f232de8beac91f920c3fcba4740ff4f6a437e1893d299e6fda9b2aea0.json  query-d5197c5f622b21f02b93a2c18a7972bf422371a5d509d426300e6c4cdb92f471.json  query-d605093e335d197f9dea2eab9701166e4c425854b18d3e45511f9242ce830ff9.json
apps/desktop/src-tauri/capabilities/: app-plugins.json  base.json  desktop.json  migrated.json  plugins.json  tauri-plugins.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bindings.rs  commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/features/: mod.rs
apps/desktop/src-tauri/src/shared/: commands.rs  mod.rs  specta.rs
apps/desktop/src/1_app/: AppRoot.tsx  AppRouter.tsx  app.css
apps/desktop/src/1_app/config/: constants.ts  theme.ts
apps/desktop/src/1_app/layouts/: AppErrorBoundary.tsx  AppLayout.tsx  MainLayout.tsx  RootErrorBoundary.tsx
apps/desktop/src/1_app/lib/: exposeWindowMethods.ts  index.ts  initializeApp.ts  showUpdateAvailable.tsx  theme.ts  usePreventRightClick.ts  useUpdateSync.ts
apps/desktop/src/1_app/model/: aether.ts  index.ts  initialize.ts  windowUtils.ts
apps/desktop/src/1_app/providers/: AppGlobalsProvider.tsx  ColorModeProvider.tsx  index.ts
apps/desktop/src/3_widgets/install-content-dialog/: index.ts
apps/desktop/src/6_shared/api/: index.ts
apps/desktop/src/6_shared/config/: tailwind.config.ts
apps/desktop/src/6_shared/i18n/: en.json  index.ts  ru.json
apps/desktop/src/6_shared/lib/: index.ts  parseMarkdown.ts
apps/desktop/src/app/: App.tsx  AppRoot.tsx  AppRouter.tsx  app.css
apps/desktop/src/core/: mod.rs
apps/desktop/src/features/: mod.rs
apps/desktop/src/shared/: commands.rs  mod.rs  specta.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json  plugins.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: app_settings.rs  auth.rs  base.rs  instance.rs  metadata.rs  minecraft.rs  mod.rs  plugin.rs  process.rs  settings.rs  tauri.rs  utils.rs
src-tauri/src/api/tauri/: account.rs  base.rs  instance.rs  minecraft.rs  mod.rs  plugin.rs  process.rs  settings.rs
src-tauri/src/core/app/: commands.rs  events.rs  initialize.rs  launch.rs  launch_app.rs  mod.rs  setup_app.rs  utils.rs
src-tauri/src/core/domain/: error.rs  frontend_error.rs  manual_exit_flag_state.rs  mod.rs
src-tauri/src/core/infra/: handle_app_event.rs  mod.rs  prevent_exit_on_close.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/app_settings/: mod.rs
src-tauri/src/launcher/: build_main_window.rs  launch.rs  mod.rs  setup.rs
src-tauri/src/models/: minecraft.rs
src-tauri/src/state/: app_state.rs  mod.rs  settings.rs
src-tauri/src/utils/: file.rs  mica.rs  mod.rs  result.rs  tauri.rs  window.rs
(+2827 files in other folders)
