[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "packages/core/aether-core",
  "packages/core/aether-core-gen",
  "packages/core/aether-core-plugin-api",
  "packages/core/register-schema",
  "packages/core/register-schema-derive",
]

[profile.release]
opt-level = 3 # Maximize runtime performance (critical for Wasm/Extism performance)
codegen-units = 16 # Split crates into 16 chunks to compile in parallel across all cores
lto = "thin" # Enable fast parallel Link-Time Optimization
strip = true # Automatically strip symbols from the binary (greatly reduces .exe size)
panic = "abort" # Remove stack unwinding code to reduce size and slightly speed up builds

[workspace.dependencies]
aether-core = { path = "packages/core/aether-core" }
register-schema = { path = "packages/core/register-schema" }
register-schema-derive = { path = "packages/core/register-schema-derive" }

anyhow = "1"
schemars = "1.2.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
