[workspace]
resolver = "2"
members = [
    "apps/desktop/",
    "packages/client-bindings",
    "packages/core/aether-core",
    "packages/core/aether-core-gen",
    "packages/core/aether-core-plugin-api",
    "packages/core/register-schema",
    "packages/core/register-schema-derive",
]

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
implicit_hasher = "allow"
unused_async = "allow"

[workspace.dependencies]
# Internal Packages
aether-core = { path = "packages/core/aether-core" }
register-schema = { path = "packages/core/register-schema" }
register-schema-derive = { path = "packages/core/register-schema-derive" }

# Error Handling & Logging
anyhow = "1"
log = "0.4"
thiserror = "2"

# Serialization & Data
chrono = { version = "0.4", features = ["serde"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.18.0"
sqlx = { version = "0.8.6", default-features = false }
uuid = { version = "1.10", features = ["serde", "v4"] }

# Async & Runtime
async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }

# Tauri & Frontend Bridge
specta = { version = "=2.0.0-rc.25", features = [
    "serde_json",
    "uuid",
    "chrono",
    "semver",
] }
specta-typescript = "0.0.12"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "test"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

# Utilities
semver = "1.0"

[profile.release]
opt-level = 3       # Maximize runtime performance
codegen-units = 16  # Split crates into 16 chunks for parallel compilation
lto = "thin"        # Enable fast parallel Link-Time Optimization
strip = true        # Automatically strip symbols (reduces binary size)
panic = "abort"     # Remove stack unwinding code
incremental = false
