[package]
name = "aether"
version = "0.3.1"
description = "Desktop application for managing Minecraft instances and mods"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }

anyhow = "1"
thiserror = "1"
log = "0.4"

uuid = { version = "1.10", features = ["serde", "v4"] }

async-event-emitter = "0.1.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dashmap = { version = "6", features = ["serde"] }
open = { version = "5", features = ["shellexecute-on-windows"] }

daedalus = "0.2.3"

aether-core = { git = 'https://github.com/MangriMen/aether-core.git', version = "0.3.0" }

[patch."https://github.com/MangriMen/aether-core"]
aether-core = { path = "../../aether-core/aether-core" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
