[package]
name = "aether"
version = "0.6.2"
description = "Desktop application for managing Minecraft instances and mods"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = ['tray-icon'] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

tokio = { version = "1", features = ["full"] }

anyhow = "1"
thiserror = "2"
log = "0.4"

uuid = { version = "1.10", features = ["serde", "v4"] }

async-event-emitter = "0.1.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dashmap = { version = "6", features = ["serde"] }
open = { version = "5", features = ["shellexecute-on-windows"] }

daedalus = "0.2.3"

aether-core = { git = 'https://github.com/MangriMen/aether-core.git', version = "0.5.2" }

serr = { git = 'https://github.com/MangriMen/serr.git', version = "0.1.0", features = [
  "derive",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
