[package]
name = "aether"
version = "0.10.5"
description = "Desktop application for managing Minecraft instances and mods"
edition.workspace = true
rust-version.workspace = true
default-run = "aether"

[package.metadata.cargo-machete]
ignored = ["serde_json"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aether_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aether"
path = "src/main.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate-bindings.rs"
required-features = ["generate-bindings"]

[features]
generate-bindings = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[dependencies]

# Tauri & Plugins
tauri.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# Workspace Dependencies
aether-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
specta.workspace = true
specta-typescript.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "chrono"] }
tauri-specta.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

# External Libraries
mime_guess = "2.0.5"
open = { version = "5", features = ["shellexecute-on-windows"] }
percent-encoding = "2.3.2"
windows-sys = "0.61.2"

[build-dependencies]
paste = "1"
tauri-build = { version = "2", features = ["codegen"] }

[lints]
workspace = true
