[package]
name = "aether"
version = "0.8.7"
description = "Desktop application for managing Minecraft instances and mods"
edition = "2021"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# Tauri & Plugins
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

# External Libraries
open = { version = "5", features = ["shellexecute-on-windows"] }
paste = "1"
specta = { version = "=2.0.0-rc.24", features = [
  "serde_json",
  "uuid",
  "chrono",
  "semver",
] }
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
ts-rs = { version = "12.0.1", features = ["uuid-impl", "chrono-impl"] }

# Workspace Dependencies
aether-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serr.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
serde_with.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[build-dependencies]
paste = "1"
tauri-build = { version = "2", features = ["codegen"] }
